--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,11 +5,10 @@ on:
     branches:
       - main
 
-
 jobs:
   My-Deploy-Job:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Hello World 찍기
+      - name: Hello World 출력
         run: echo "Hello World"
