--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,27 @@
 name: Github Actions 실행시켜보기
 
+# Event : 실행되는 시점을 설정
+# main 이라는 브랜치에 push 될 때 아래 Workflow를 실행
 on:
   push:
     branches:
       - main
 
+# 하나의 Workflows는 1개 이상의 Job으로 구성됩니다.
+# 여러 job은 기본적으로 병렬적으로 수행된다.
 jobs:
+  #job을 식별하기 위한 id
   My-Deploy-Job:
+    # ubuntu 환경 / 가장 최신 버전
     runs-on: ubuntu-latest
 
+    # step : 특정 작업을 수행하는 가장 작은 단위
+    # job은 여러 Step들로 구성되어 있다.
     steps:
       - name: Hello World 출력
         run: echo "Hello World"
+
+      - name: 여러 명령어 문장 작성하기
+        run : |
+          echo "good"
+          echo "morning"
